crates/test-files/fixtures/compile_errors/call_method_in_storage.fe
struct Bar {
    pub x: u256

    pub fn get_x(self) -> u256{
        return self.x
    }
}

contract Foo {
    bar: Bar

    pub fn __init__(mut self) {
        self.bar = Bar( x: 2 )
    }
    fn yay(self) {
        self.bar.get_x()
    }
}
